# chaum-pedersen-zkp

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/chaum_pedersen/: Cargo.toml
crates/chaum_pedersen/src/: chaum_pedersen.rs  ecc_chaum_pedersen.rs  lib.rs  utils.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  lib.rs
crates/storage/src/model/: challenge_model.rs  user_model.rs
crates/zkp/: Cargo.toml  build.rs
crates/zkp/src/client/: main.rs  utils.rs
crates/zkp/src/server/: main.rs  utils.rs
crates/zkp/src/server/service/: auth_service.rs  mod.rs
crates/zkp/src/server/storage/: db.rs  mod.rs
crates/zkp/src/server/storage/model/: challenge_model.rs  user_model.rs
docker/: Dockerfile
proto/: zkp_auth.proto
