[package]
authors = ["Elvis Sabanovic <elvissabanovic3@gmail.com>"]
description = "Implementation of Chaum Pedersen Protocol"
name = "chaum_pedersen"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
tokio = { version = "1.32.0", features = ["full"] }
curve25519-dalek = { version = "4.0.0", features = ["digest", "rand_core", "serde"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
rand = "0.8.5"
rand_core = "0.6.4"
lazy_static = "1.4.0"
sha2 = "0.10.7"