[package]
authors = ["Elvis Sabanovic <elvissabanovic3@gmail.com>"]
description = "Storage lib"
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
serde = { version = "1.0.186", features = ["derive"] }
bincode = "1.3.3"