[package]
authors = ["Elvis Sabanovic <elvissabanovic3@gmail.com>"]
description = "zkp chaum pedersen protocol"
edition = "2021"
name = "zkp"
version = "0.1.0"

[[bin]]
name = "zkp_server"
path = "src/server/main.rs"

[[bin]]
name = "zkp_client"
path = "src/client/main.rs"

[dependencies]
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
curve25519-dalek = { version = "4.0.0", features = ["alloc"] }
chaum_pedersen = { path = "../chaum_pedersen", version = "0.1.0" }
storage = { path = "../storage", version = "0.1.0" }
serde_json = "1.0.105"
tonic = "0.9.2"
prost = "0.11.9"
hex = "0.4.3"
clap = "4.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.16"
sha2 = "0.10.7"
log = "0.4.0"
pretty_env_logger = "0.4.0"

[build-dependencies]
tonic-build = "0.9.2"